# stageLX

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
assets/shaders/: beam.wgsl  beam_composite.wgsl  beam_sprite.wgsl
benches/: flood_artnet.rs  spawn_500.rs
crates/stagelx-3ds/: Cargo.toml
crates/stagelx-3ds/src/: lib.rs
crates/stagelx-core/: Cargo.toml
crates/stagelx-core/src/: attribute.rs  fixture.rs  lib.rs  patch.rs  types.rs  universe.rs
crates/stagelx-dmx/: Cargo.toml
crates/stagelx-dmx/src/: cue_playback.rs  engine.rs  lib.rs  merge.rs  projection.rs  stage_capture.rs
crates/stagelx-gdtf/: Cargo.toml
crates/stagelx-gdtf/src/: error.rs  gdtf.rs  lib.rs  mvr.rs  mvr_export.rs
crates/stagelx-gdtf/tests/: corpus.rs
crates/stagelx-io/: Cargo.toml
crates/stagelx-io/src/: artnet.rs  config.rs  error.rs  lib.rs  midi.rs  osc.rs  sacn.rs  stats.rs  supervisor.rs  usb.rs
crates/stagelx-patch/: Cargo.toml
crates/stagelx-patch/src/: lib.rs
crates/stagelx-render/: Cargo.toml
crates/stagelx-render/src/: beam.rs  beam_sprite.rs  diagnostics.rs  fixture.rs  gobo.rs  lib.rs  lod.rs  scene.rs  venue.rs
crates/stagelx-show/: Cargo.toml
crates/stagelx-show/src/: cue.rs  lib.rs  show_file.rs
crates/stagelx-state/: Cargo.toml
crates/stagelx-state/src/: lib.rs
crates/stagelx-ui/: Cargo.toml
crates/stagelx-ui/src/: cue.rs  io_panel.rs  lib.rs  library.rs  patch.rs  programmer.rs  theme.rs  widgets.rs
design_handoff_stagelx_ui/: README.md
design_handoff_stagelx_ui/prototype/: atoms.jsx  index.html  io.jsx  layout.jsx  library.jsx  patch.jsx  programmer.jsx  tokens.css
design_handoff_stagelx_ui/source-reference/: patch.rs  programmer.rs
src/: main.rs
tests/fixture_corpus/: README.md
