[workspace]
members = [
    "crates/stagelx-core",
    "crates/stagelx-gdtf",
    "crates/stagelx-dmx",
    "crates/stagelx-state",
    "crates/stagelx-io",
    "crates/stagelx-render",
    "crates/stagelx-ui",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
stagelx-core   = { path = "crates/stagelx-core" }
stagelx-gdtf   = { path = "crates/stagelx-gdtf" }
stagelx-dmx    = { path = "crates/stagelx-dmx" }
stagelx-state  = { path = "crates/stagelx-state" }
stagelx-io     = { path = "crates/stagelx-io" }
stagelx-render = { path = "crates/stagelx-render" }
stagelx-ui     = { path = "crates/stagelx-ui" }
ds3            = { path = "../3ds-rs" }

# Shared external deps
bevy              = { version = "0.18.0" }
bevy_egui         = { version = "0.39.1" }
# tokio removed — project uses sync threads + crossbeam (see PLAN.md Rule 17)
crossbeam-channel = "0.5"
thiserror         = "2"
serde             = { version = "1", features = ["derive"] }
zip               = "2"
quick-xml         = { version = "0.37", features = ["serialize"] }
image             = { version = "0.25", default-features = false, features = ["png"] }
serialport        = "4"
midir             = "0.9"
rosc              = "0.5"
tobj              = { version = "4", features = ["async"] }
gltf              = "1"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[package]
name    = "stagelx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stagelx"
path = "src/main.rs"

[dependencies]
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
stagelx-core   = { workspace = true }
stagelx-gdtf   = { workspace = true }
stagelx-dmx    = { workspace = true }
stagelx-state  = { workspace = true }
stagelx-io     = { workspace = true }
stagelx-render = { workspace = true }
stagelx-ui     = { workspace = true }
