[package]
name    = "stagelx-io"
version = "0.1.0"
edition = "2021"

[dependencies]
stagelx-core      = { workspace = true }
stagelx-dmx       = { workspace = true }
stagelx-state     = { workspace = true }
bevy              = { workspace = true }
thiserror         = { workspace = true }
crossbeam-channel = { workspace = true }
serialport        = { workspace = true }
midir             = { workspace = true }
rosc              = { workspace = true }
