[package]
name    = "stagelx-render"
version = "0.1.0"
edition = "2021"

[dependencies]
stagelx-core  = { workspace = true }
stagelx-gdtf  = { workspace = true }
stagelx-patch = { workspace = true }
stagelx-show  = { workspace = true }
ds3           = { workspace = true }
bevy          = { workspace = true }
tobj          = { workspace = true }
gltf          = { workspace = true }
ufbx          = { workspace = true }
