[package]
name    = "stagelx-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
stagelx-core = { workspace = true }
stagelx-gdtf = { workspace = true }
stagelx-dmx  = { workspace = true }
bevy         = { workspace = true }
# bevy_egui version must match the active bevy version — wire this in when UI work begins (Phase 1)
# bevy_egui = { workspace = true }
