[package]
name    = "stagelx-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
stagelx-core   = { workspace = true }
stagelx-gdtf   = { workspace = true }
stagelx-state  = { workspace = true }
stagelx-render = { workspace = true }
bevy           = { workspace = true }
bevy_egui      = { workspace = true }
egui_extras    = "0.33"
rfd            = "0.15"
